--- a/02-private-libraries/README.adoc
+++ b/02-private-libraries/README.adoc
@@ -28,10 +28,17 @@ This example uses the famous BouncyCastle security library. _For didactic purpos
 
 If you want to use the integrated Karaf, you can follow https://github.com/neoautus/architecture-examples/tree/master/00-stage-karaf[these instructions to build the Karaf stage].
 
-* Run `ant build-private-libraries` from the example root *OR*
+* Run `ant build-private-libraries` from the example root;
++
+or
+
 * Run `ant` from the subproject directory.
 
 === Testing
+
+To test OSGi code you need to _deploy_ the test bundles. It's quite similar to a JEE application: the OSGi container runs a collection of other modules, so the test code will _interact_ with these modules instead of simply running like "java -jar Test.jar". Messages from the test modules will appear on the log.
+
+It is recommended to have a _stage_ available (see <<Building>>). If you have, the deployment is _automatic_.
 
 * After building, if you are using the provided Karaf stage, the bundles are already copied into `deploy` directory and are ready to be deployed. If Karaf is running, they are *already deployed*;
 * If you wish to test on another systems, the Jars you need are available in `02-private-libraries/dist` directory;
@@ -39,6 +46,7 @@ If you want to use the integrated Karaf, you can follow https://github.com/neoau
 You will see the log messages below:
 
 ....
+$ tail -f stage/data/log/karaf.log
 (...) Currently we have 2 registered security libraries
 (...) Library #0: org.lucidj.bouncycastle.BouncyCastle2@xxxxxxxx info=BouncyCastle Security Provider v1.59
 (...) Library #1: org.lucidj.bouncycastle.BouncyCastle1@yyyyyyyy info=BouncyCastle Security Provider v1.54
