--- a/01-library-version/README.adoc
+++ b/01-library-version/README.adoc
@@ -41,13 +41,19 @@ or
 
 === Testing
 
-To test OSGi code you need to _deploy_ the test bundles. It's quite similar to a JEE application: the OSGi container runs a collection of other modules, so the test code will _interact_ with these modules instead of simply running like "java -jar Test.jar".
+To test OSGi code you need to _deploy_ the test bundles. It's quite similar to a JEE application: the OSGi container runs a collection of other modules, so the test code will _interact_ with these modules instead of simply running like "java -jar Test.jar". Messages from the test modules will appear on the log.
 
 It is recommended to have a _stage_ available (see <<Building>>). If you have, the deployment is _automatic_.
 
 * After building, if you are using the provided Karaf stage, the bundles are already copied into `deploy` directory and are ready to be deployed. If Karaf is running, they are *already deployed*;
 * If you wish to test on another systems, the Jars you need are available in `01-library-version/dist` directory;
-* You will see the log message: `VALIDATE! client10='Client 1.0 gets 'Hello from SimpleLib 1.0' from SimpleLib' client20='Client 2.0 gets 'Hello from SimpleLib 2.0' from SimpleLib'`
+
+You will see the log message below:
+
+....
+$ tail -f stage/data/log/karaf.log
+(...) VALIDATE! client10='Client 1.0 gets 'Hello from SimpleLib 1.0' from SimpleLib' client20='Client 2.0 gets 'Hello from SimpleLib 2.0' from SimpleLib'`
+....
 
 === Explanation
 
