--- a/03-rest-playground/README.adoc
+++ b/03-rest-playground/README.adoc
@@ -27,7 +27,7 @@ This example also includes the component _HelloService_, which shows how to crea
 
 == Building
 
-If you want to use the integrated Karaf, you can follow https://github.com/neoautus/architecture-examples/tree/master/00-stage-karaf[these instructions to build the Karaf stage].
+If you want to use the integrated Karaf, you can follow https://github.com/neoautus/architecture-examples/tree/master/stage-templates/apache-karaf-4.1[these instructions to build the Karaf stage].
 
 * Run `ant build-rest-playground` from the example root;
 +
