Changed the paragraph both options on the stage area, Felix and Karaf

--- a/README.adoc
+++ b/README.adoc
@@ -32,13 +32,14 @@ Specially, you will get known to `Bnd` (http://bndtools.org/), which is *the* re
 
 === Building
 
-We strongly suggest you to start with the Karaf stage, which is where the bundles will be deployed, and test every subproject individually. https://github.com/neoautus/architecture-examples/tree/master/stage-templates/apache-karaf-4.1[You can follow these instructions to build the Karaf stage.]
+We suggest you to start building a stage, this stage may be a Felix or Karaf stage, Karaf stage will be built  by default on build.xml. The stage area is where the bundles will be deployed, and every subproject will be tested individually. https://github.com/neoautus/architecture-examples/tree/master/stage-templates/apache-karaf-4.1/ [You can follow these instructions to build the Karaf stage.]
+https://github.com/neoautus/architecture-examples/tree/master/stage-templates/apache-felix-5.6/ [You can follow these instructions to build the Felix stage.]
 
 To specific instructions to run the examples and the tests are available for each subproject on the `README.adoc` file.
 
 To build _all_ subprojects at once, just type `ant` on project root.
 
-By default, Ant will download and cache all needed tools, then invoke the `build-all` target. The output of all builds will be located in `dist/` directory beneath every subproject. If you're using the Karaf stage, all bundles will also be deployed into Karaf.
+By default, Ant will download and cache all needed tools, then invoke the `build-all` target. The output of all builds will be located in `dist/` directory beneath every subproject. Karaf stage, will be built by default, so all bundles will be deployed into Karaf. If you change the stage to Felix (changing the stage target to Felix all bundles will
 
 === Useful Ant targets
 
